Update on Overleaf.

--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -718,18 +718,18 @@ Table~\ref{tab:KEX1} presents the absolute and relative changes over 2010-2019 f
 Fig.~\ref{fig:KEX1} illustrates the statistics of the reductions in EC over the period 2010-2019, and for different seasons. 
 
 %
-A  reduction (-4.5$\pm$1.5\%/yr, Tab.~\ref{tab:KEX1}) 
+A  reduction (-4.5$\pm$1.5~\%/yr, Tab.~\ref{tab:KEX1}) 
 in elemental carbon (EC) for 2010--2019 was
 calculated for the 15 sites assessed, which is
-quite comparable to the reduction (-5.0$\pm$0.9\%/yr)
+quite comparable to the reduction (-5.0$\pm$0.9~\%/yr)
 calculated for the eleven sites where the reduction was statistically
 significant. The reduction was rather similar considering these eleven
-sites, ranging from -4.2\%/yr to -5.8\%/yr for ten out of eleven
+sites, ranging from -4.2~\%/yr to -5.8~\%/yr for ten out of eleven
 sites. %, thus we see no apparent spatial pattern in the reductions
 (Fig.~\ref{fig:OCtrends}). 
 The largest reduction was seen amongst the sites with the
-highest EC levels, i.e., at Iskrba (-7\%/yr) in Slovenia and at Ispra
-(-5.8\%/yr) in the Po Valley region in Northern Italy. Notably, these
+highest EC levels, i.e., at Iskrba (-7~\%/yr) in Slovenia and at Ispra
+(-5.8~\%/yr) in the Po Valley region in Northern Italy. Notably, these
 were the only sites where a statistically significant reduction was
 observed for all seasons, being most pronounced in summer, although
 by a small margin. When considering all sites, the reduction was most
@@ -737,7 +737,7 @@ pronounced in summer and fall (Tab.~\ref{tab:KEX1},Fig.~\ref{fig:KEX1}), but the
 that there is a minor seasonal variability in the reduction of EC. It can be noted though that
 there are more sites with significant trends (p-values $<$ 0.05)  in summer than winter (Fig.\ref{fig:ECarrows}).
 
-Fig.~\ref{fig:KEX1} illustrates the statistics of the reductions in EC  over the period 2010-2019, and for different seasons. For EC the model is seen to capture the year to year changes very well over the ten years, and captures well the relative changes which are ca. -4\% in all seasons. Larger differences are seen in the absolute changes (which may reflect the difficulties with the EC emissions mentioned in Sect.~\ref{ss:IssuesECOC}).
+Fig.~\ref{fig:KEX1} illustrates the statistics of the reductions in EC  over the period 2010-2019, and for different seasons. For EC the model is seen to capture the year to year changes very well over the ten years, and captures well the relative changes which are ca. -4 \%/yr in all seasons. Larger differences are seen in the absolute changes (which may reflect the difficulties with the EC emissions mentioned in Sect.~\ref{ss:IssuesECOC}).
 These points about model-measurement comparison for EC are discussed further in Sect.~\ref{ss:DiscECOC}.
 
 \begin{table}
