Adding spaces before %/yr

--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -737,7 +737,7 @@ pronounced in summer and fall (Tab.~\ref{tab:KEX1},Fig.~\ref{fig:KEX1}), but the
 that there is a minor seasonal variability in the reduction of EC. It can be noted though that
 there are more sites with significant trends (p-values $<$ 0.05)  in summer than winter (Fig.\ref{fig:ECarrows}).
 
-Fig.~\ref{fig:KEX1} illustrates the statistics of the reductions in EC  over the period 2010-2019, and for different seasons. For EC the model is seen to capture the year to year changes very well over the ten years, and captures well the relative changes which are ca. -4 \%/yr in all seasons. Larger differences are seen in the absolute changes (which may reflect the difficulties with the EC emissions mentioned in Sect.~\ref{ss:IssuesECOC}).
+Fig.~\ref{fig:KEX1} illustrates the statistics of the reductions in EC  over the period 2010-2019, and for different seasons. For EC the model is seen to capture the year to year changes very well over the ten years, and captures well the relative changes which are ca. -4~\%/yr in all seasons. Larger differences are seen in the absolute changes (which may reflect the difficulties with the EC emissions mentioned in Sect.~\ref{ss:IssuesECOC}).
 These points about model-measurement comparison for EC are discussed further in Sect.~\ref{ss:DiscECOC}.
 
 \begin{table}
@@ -819,13 +819,13 @@ Autumn &              15 &          8 &          11 &                  -0.023 & 
  Table~\ref{tab:KEX2} presents the absolute and relative changes in OC over 2010-2019 from 15 EMEP sites, as annual values and with confidence intervals, and from both observed and modelled values. The spatial variation of these trends for summer and winter can be seen as `arrow' plots in Fig.~\ref{fig:OCarrows}, and Fig.\ref{fig:OCtrends} shows again the annual trends, but superimposed upon the modelled field of modelled OC.
 Fig.~\ref{fig:KEX1} illustrates the statistics of the reductions in OC  over the period 2010-2019, and for different seasons. 
  %
-A 2.4$\pm$1.6\%/yr reduction
+A 2.4$\pm$1.6~\%/yr reduction
   in organic carbon (OC) for 2010--2019
 was calculated for the 15 sites assessed (Tab.~\ref{tab:KEX2}), but the
 downward trend was statistically significant only for Iskrba (Slovenia)
 and Ispra (Italy), which are amongst the sites with the highest OC
 loading. At these two sites, the reduction was noticeably higher 
-(-3.1\%/yr at Iskrba, -5.9\%/yr at Ispra) than for the mean of all sites. The
+(-3.1~\%/yr at Iskrba, -5.9~\%/yr at Ispra) than for the mean of all sites. The
 reduction in OC appears somewhat lower at the westernmost and northernmost
 sites (Fig.\ref{fig:OCtrends}). 
 
@@ -838,24 +838,24 @@ sites (Fig.\ref{fig:OCtrends}).
 
 There was a pronounced seasonal variability in the reduction observed for
 OC (Tab.~\ref{tab:KEX2}, Figs.~\ref{fig:KEX1},\ref{fig:OCarrows}). In winter, the
- reduction (-4.2\%/yr) was equal to that for
-EC (-4.3\%/yr, but only statistically significant for six of the sites,
-whereas no reduction (0\%/yr) was seen in summer. Spring (-2.2\%/yr, Tab.~\ref{tab:KEX2}) and fall (3.0\%/yr) are transition seasons with reductions in between
+ reduction (-4.2~\%/yr) was equal to that for
+EC (-4.3~\%/yr, but only statistically significant for six of the sites,
+whereas no reduction (0~\%/yr) was seen in summer. Spring (-2.2~\%/yr, Tab.~\ref{tab:KEX2}) and fall (3.0~\%/yr) are transition seasons with reductions in between
 that of winter and summer and statistically significant reductions were
 observed only for Ispra. 
 %
 Figure~\ref{fig:OCarrows} makes it clear that there were large differences in both sign and magnitude of the summertime trends in OC at individual sites, in both modelled and observed results. For the winter trends, Fig.~\ref{fig:OCarrows} shows that essentially all observed wintertime trends were reductions, whereas the modelled trends were more variable and less significant. In summertime the trends can be positive or negative, and are generally not significant.
 
 
-Fig.~\ref{fig:KEX1} illustrates the statistics of the reductions in OC  over the period 2010-2019, and for different seasons. For OC the model substantially underpredicts the yearly concentrations over the whole period (see also Tab.~\ref{tab:KEX2}), and also underpredicts the trends. There is substantial seasonal variation though. Observed reductions in winter (DJF) of -4.2\%/yr are are not reproduced by the model at all (-1.1\%/yr), though even in winter the observed trends were only significant for six of the 15 sites. In summer the observed trends are very small but negative (-0.03\%/yr), whereas the model suggests positive trends of 2.1\%/yr. As noted above (c.f. Fig.~\ref{fig:OCarrows}), the summer trends are very different for individual sites, even with respect to the sign of the change, and one cannot assign much significance to the changes. 
+Fig.~\ref{fig:KEX1} illustrates the statistics of the reductions in OC  over the period 2010-2019, and for different seasons. For OC the model substantially underpredicts the yearly concentrations over the whole period (see also Tab.~\ref{tab:KEX2}), and also underpredicts the trends. There is substantial seasonal variation though. Observed reductions in winter (DJF) of -4.2~\%/yr are are not reproduced by the model at all (-1.1~\%/yr), though even in winter the observed trends were only significant for six of the 15 sites. In summer the observed trends are very small but negative (-0.03~\%/yr), whereas the model suggests positive trends of 2.1~\%/yr. As noted above (c.f. Fig.~\ref{fig:OCarrows}), the summer trends are very different for individual sites, even with respect to the sign of the change, and one cannot assign much significance to the changes. 
 
 The model calculated a
-reduction in OC of -0.6\%/yr considering all sites, which was noticeably
-less than for the observations (-2.4\%/yr) (c.f. Tab.~\ref{tab:KEX2}). The model also underpredicted
+reduction in OC of -0.6~\%/yr considering all sites, which was noticeably
+less than for the observations (-2.4~\%/yr) (c.f. Tab.~\ref{tab:KEX2}). The model also underpredicted
 the decrease calculated for the observations for each season, thereby
 reproducing the seasonality in trend seen for the observations. A decrease
 in observed OC was calculated for all sites, whereas the model calculated
-an increase, typically <0.5\%/yr, for four of the sites. These points about model-measurement comparison for OC are discussed further in Sect.~\ref{ss:DiscECOC}.
+an increase, typically <0.5~\%/yr, for four of the sites. These points about model-measurement comparison for OC are discussed further in Sect.~\ref{ss:DiscECOC}.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -914,7 +914,7 @@ autumn &              15 &          1 &           0 &                  -0.098 & 
 \subsection{Discussion of EC, OC trends}
 \label{ss:DiscECOC}
 
-Before discussing the trends shown in Sect.~\ref{ss:trendsEC}-\ref{ss:trendsOC} in  more detail, it is important to note that ten years is a short period over which to assess such trends. In order to illustrate this, Table~\ref{tab:BirkenesTrends} shows trends assessed for three periods, 2008-2018, 2008-2019, and 2010-2019, all using the same methodology. It is seen that the magnitude of the trends can differ substantially depending on the time-window. For EC the values range from -2.2\%/yr to \mbox{-4.24\%/yr}, and for levoglucosan from -2.5\%/yr to -5.2\%/yr, with all values satisfying the p-value$<$0.05 significance test. Trend values for OC vary even more, but these trends were insignificant for all periods. Although we expect some of these trends to reflect changes in emissions, meteorological variation will also play a large role, especially in causing the high sensitivity of the calculated trends to small changes in the time window chosen.
+Before discussing the trends shown in Sect.~\ref{ss:trendsEC}-\ref{ss:trendsOC} in  more detail, it is important to note that ten years is a short period over which to assess such trends. In order to illustrate this, Table~\ref{tab:BirkenesTrends} shows trends assessed for three periods, 2008-2018, 2008-2019, and 2010-2019, all using the same methodology. It is seen that the magnitude of the trends can differ substantially depending on the time-window. For EC the values range from -2.2~\%/yr to \mbox{-4.24~\%/yr}, and for levoglucosan from -2.5~\%/yr to -5.2~\%/yr, with all values satisfying the p-value$<$0.05 significance test. Trend values for OC vary even more, but these trends were insignificant for all periods. Although we expect some of these trends to reflect changes in emissions, meteorological variation will also play a large role, especially in causing the high sensitivity of the calculated trends to small changes in the time window chosen.
 
 
 \begin{table}[H]
@@ -938,7 +938,7 @@ Levoglucosan & annual  & -2.5 (0.043)        &  -2.48 (0.024)   & -5.2  (0.032) 
 
 Notes:
 (a) Values for 2008-2018 use same procedure as for 2008-2019 and 2010-2019. Numbers
-differ slightly from results of \citet{Yttri2021}, which had 2008-2018 trends of -4.2\%/yr for EC and -2.8\%/yr for levoglucosan.\\
+differ slightly from results of \citet{Yttri2021}, which had 2008-2018 trends of -4.2~\%/yr for EC and -2.8~\%/yr for levoglucosan.\\
 \COMMENT{ISSUES:\\ Explain diffs to Yttri et al 2021 and 2008-2018 trends better?\\
 p-values of 1 look odd. Do we have any good words for this?}\\
 }
@@ -947,16 +947,16 @@ p-values of 1 look odd. Do we have any good words for this?}\\
 %IN PROGRESS...
 %Larger differences are seen in the absolute changes (which may reflect the %difficulties with the EC emissions mentioned in Sect.~\ref{ss:IssuesECOC}).
 
-The 2010-2019 reduction of 4.2\%/yr in observed EC across all seasons is rather dramatic, though as noted above a different choice of time-window might suggest a lower magnitude of changes. 
+The 2010-2019 reduction of 4.2~\%/yr in observed EC across all seasons is rather dramatic, though as noted above a different choice of time-window might suggest a lower magnitude of changes. 
 As discussed in Sect.~\ref{ss:trendsEC} there is only a minor seasonal variability in the reduction of EC. This partly reflects the minor seasonal variability in most EC sources, but it is puzzling since residential heating (in GNFR sector C) should have clear winter maxima. \citet{Yttri2021} found that the reduction in EC
 was most pronounced in spring and summer at the Birkenes Observatory in
 southern Norway for 2001--2018, arguing that this was due to influence
 from less abated sources such as domestic heating in winter and fall. This argument was
-supported by a lower (-2.8\%/yr) reduction for the biomass burning
-tracer levoglucosan (2008--2018) than for EC (-4.2\%/yr) (these trend numbers are from \citeauthor{Yttri2021}, and differ slightly from trends calculated for this report, c.f. Tab.~\ref{tab:BirkenesTrends}). In this study, however, 
-we calculated a -5.2\%/yr reduction for the biomass burning tracer
+supported by a lower (-2.8~\%/yr) reduction for the biomass burning
+tracer levoglucosan (2008--2018) than for EC (-4.2~\%/yr) (these trend numbers are from \citeauthor{Yttri2021}, and differ slightly from trends calculated for this report, c.f. Tab.~\ref{tab:BirkenesTrends}). In this study, however, 
+we calculated a -5.2~\%/yr reduction for the biomass burning tracer
 levoglucosan observed at the Birkenes Observatory for 2010-2019, which is
-higher than the -4.2\%/yr calculated for EC.
+higher than the -4.2~\%/yr calculated for EC.
 %, which might suggest that abatement of carbonaceous aerosol from biomass burning has been equally successful as that of EC from fossil fuel sources. This 
 This finding seems to contradict the conclusion made
 by \citet{Yttri2021}, but the differences in trends using different time-windows (c.f.Tab.~\ref{tab:BirkenesTrends}) suggests it is difficult to draw firm conclusions about these changes.
@@ -976,15 +976,15 @@ The issues with condensable organics (Sect.~\ref{ss:IssuesECOC}) impact these es
 %caution should be made drawing firm conclusions from such short time series as those %presented here\COMMENT{ Yes!}, illustrated by the different reductions calculated for %levoglucosan for 2008--2018 and for 2010--2019.
 
 We can note that \citet{Yttri2021} also found a statistically significant downward trend of similar magnitude
-(-4.2\%/yr)  for EC for 2010--2019 as for 2001--2018
+(-4.2~\%/yr)  for EC for 2010--2019 as for 2001--2018
 for the Norwegian Birkenes Observatory. This suggests a large-scale reduction in EC emissions.
 
 \SKIP{Influenced by
 major anthropogenic emission regions in Europe, this finding indicates a
 potential for further reductions in future years not only at the Birkenes
 Observatory but for Europe in general.  The model calculated a reduction
-in EC of -3.9\%/yr considering all sites, which was slightly less than
-for the observations (-4.5\%/yr) but highly comparable. In spring,
+in EC of -3.9~\%/yr considering all sites, which was slightly less than
+for the observations (-4.5~\%/yr) but highly comparable. In spring,
 the model-calculated reduction equaled that based on observations,
 whereas it was lower for the other seasons. As for the observations,
 the model predicted a reduction in EC for all sites, but for a few sites
@@ -1000,14 +1000,14 @@ for the observations.}
 
  
 
-Unlike EC, the observed seasonal trends for OC (c.f. Fig.~\ref{fig:KEX1} are very variable, with strong (ca. 4\%) reductions in the winter months (both DJF and SON), and apparently no change in summertime. As already noted, the individual sites show a great variation in even the sign of the calculated trends, though statistically the trends are not significant (c.f.Fig.~\ref{fig:OCarrows}. The lack of clear trend in summertime is not surprising. 
+Unlike EC, the observed seasonal trends for OC (c.f. Fig.~\ref{fig:KEX1} are very variable, with strong (ca. 4~\%) reductions in the winter months (both DJF and SON), and apparently no change in summertime. As already noted, the individual sites show a great variation in even the sign of the calculated trends, though statistically the trends are not significant (c.f.Fig.~\ref{fig:OCarrows}. The lack of clear trend in summertime is not surprising. 
 OC has a substantial influence from
 natural sources, biogenic secondary organic aerosol (BSOA) and primary
 biological aerosol particles (PBAP), which prevail in the growing season \citep[e.g.][]{Gelencser:CARB,Yttri2019}.
 These biogenic emissions are not subject to abatement, but are very sensitive to meteorology, and thus summer-time OC trends are strongly influenced by year-to-year changes in meteorological conditions.
 
 Anthropogenic OC emissions
-are likely best represented by winter-time data, and in DJF the observed trend of -4\%/yr for OC is rather similar to that found for EC (Tab.~\ref{tab:KEX2}). As
+are likely best represented by winter-time data, and in DJF the observed trend of -4~\%/yr for OC is rather similar to that found for EC (Tab.~\ref{tab:KEX2}). As
 for EC, domestic heating is an important emission source 
 %Increased emissions from domestic heating are seen
 all over Europe in the heating season
@@ -1017,8 +1017,8 @@ all over Europe in the heating season
 %or residential wood burning. Notably, the winter-time reduction in OC
 %was similar to that of EC considering all sites, and a
 At the Birkenes
-Observatory the winter-time reduction in OC (-4.1\%/yr) was only somewhat
-lower than for EC (-6.4\%/yr) and levoglucosan (-4.6\%/yr).
+Observatory the winter-time reduction in OC (-4.1~\%/yr) was only somewhat
+lower than for EC (-6.4~\%/yr) and levoglucosan (-4.6~\%/yr).
 \COMMENT{
   Karl Espen - where are these numbers coming from? Different to those in Tab.~\ref{tab:BirkenesTrends}
 }
@@ -1062,29 +1062,29 @@ less successful abatement of anthropogenic sources cannot be excluded.
 As focused abatement of anthropogenic secondary inorganic aerosol (SIA)
 precursors have reduced ambient SIA levels substantially (Sect. \QUERY{X.?}),
 other, non-SIA fractions are likely to contribute an increasing fraction
-of PM. For the EC fraction of \pmfine, however, there was a -2.4$\pm$1.1\%/yr
+of PM. For the EC fraction of \pmfine, however, there was a -2.4$\pm$1.1~\%/yr
 reduction for 2010--2019 (Fig.~\ref{fig:KEX3}, Tab.~\ref{tab:KEX3}), showing that EC has been
 more efficiently abated than the overall PM mass concentration. The model
-calculated a comparable -1.7$\pm$1.3\%/yr reduction for the EC/\pmfine ratio
+calculated a comparable -1.7$\pm$1.3~\%/yr reduction for the EC/\pmfine ratio
 but predicted a minor increase at two of the sites, which was not seen for
 observed EC/\pmfine ratios. For the few sites where measurements allow for
 a harmonized data set of EC, OC, \ce{SO4^2-} and \pmfine, i.e., only including
 measurements on common days, the reduction in the EC fraction of \pmfine
 was typically equally high or higher than for the \ce{SO4^2-} fraction. The
-OC fraction of \pmfine showed no decrease or increase (0.2$\pm$2.8\%/yr)
+OC fraction of \pmfine showed no decrease or increase (0.2$\pm$2.8~\%/yr)
 for 2010--2019 when considering all sites, which largely is explained by
 non-abatable natural sources making up a major part of OC. A substantial
-4.5\%/yr increase in OC/\pmfine was calculated for the Norwegian sites,
+4.5~\%/yr increase in OC/\pmfine was calculated for the Norwegian sites,
 experiencing low (anthropogenic) aerosol levels and a high OC fraction
 from natural sources, thus one cannot exclude the possibility that part
 of this increasing trend is due to an increase in natural sources and
-not exclusively from a decrease in anthropogenic emissions. A 2.8\%/yr
+not exclusively from a decrease in anthropogenic emissions. A 2.8~\%/yr
 increase in the OC fraction was observed for the Spanish site Montseny,
 resembling the Norwegian sites with respect to a low aerosol level and
 a high OC fraction from natural sources \citep{Kulmala2011,Crippa2014}. For the
-rest of continental Europe, a minor $\pm$1\%/yr increase/decrease
-was seen at most sites and a $\pm$2\%/yr for a few. The Kosetice
-(Czech Republic) (-5.3\%/yr) and Shauinsland (Germany) (-3.1\%/yr) sites
+rest of continental Europe, a minor $\pm$1~\%/yr increase/decrease
+was seen at most sites and a $\pm$2~\%/yr for a few. The Kosetice
+(Czech Republic) (-5.3~\%/yr) and Shauinsland (Germany) (-3.1~\%/yr) sites
 experienced a substantial decrease in the OC fraction, which was larger
 than the corresponding decrease in the EC fraction, thus deviating from
 the pattern seen at all other sites where the decrease in EC/\pmfine $>$
@@ -1168,41 +1168,41 @@ Obs.  &              15 &     2 &                  0.0001 &  (-0.003, 0.0032) & 
 \subsection{Conclusion}
 \label{ss:trendsECOCconc}
 
-A -4.5$\pm$1.6\%/yr reduction in EC was calculated across Europe for
+A -4.5$\pm$1.6~\%/yr reduction in EC was calculated across Europe for
 2010--2019 and the reduction was particularly consistent amongst the
 sites where the reduction was statistically significant. The model
-predicted a reduction that was somewhat lower (-3.9\%/yr) than the
-observations, but still comparable. A similar reduction in EC (-4.2\%/yr)
+predicted a reduction that was somewhat lower (-3.9~\%/yr) than the
+observations, but still comparable. A similar reduction in EC (-4.2~\%/yr)
 was calculated for 2010--2019 as for 2001--2018 at the Birkenes
 Observatory in southern Norway. This consistent reduction indicates a
 potential for further reduction in future years for Europe in general,
 as LRT from continental Europe explains most EC from both fossil fuel
-and biomass burning sources at the Birkenes Observatory. A  -5.2\%/yr
+and biomass burning sources at the Birkenes Observatory. A  -5.2~\%/yr
 reduction in levoglucosan at the Birkenes Observatory (2010--2019)
  indicate that EC from wood burning in Europe is declining equally
 rapid as that of EC from fossil fuel sources.
 
-The reduction in OC (-2.4$\pm$1.6\%/yr) was less pronounced than for EC,
-whereas winter-time levels (-4.2\%/yr) were comparable to EC. Non-abatable
+The reduction in OC (-2.4$\pm$1.6~\%/yr) was less pronounced than for EC,
+whereas winter-time levels (-4.2~\%/yr) were comparable to EC. Non-abatable
 natural sources of OC peak in the growing season diluting anthropogenic
 sources, thus, anthropogenic OC emissions are likely best represented by
-winter-time data. Comparable reductions in winter-time OC (-4.1\%/yr),
-winter-time EC (-6.4\%/yr) and winter-time levoglucosan (-4.6\%/yr)
+winter-time data. Comparable reductions in winter-time OC (-4.1~\%/yr),
+winter-time EC (-6.4~\%/yr) and winter-time levoglucosan (-4.6~\%/yr)
 at the Birkenes Observatory suggest that abatement of residential
 wood burning emissions has been quite effective for Europe in general,
 taking into account considerations about the length of the time series
 and Birkenes as an indicator of European emissions.
 
-The model calculated a reduction in OC of -0.6\%/yr, being noticeable
-less than for the observations (-2.4\%/yr). A similar underprediction
+The model calculated a reduction in OC of -0.6~\%/yr, being noticeable
+less than for the observations (-2.4~\%/yr). A similar underprediction
 was seen for each season, thereby reproducing the seasonality in trend
 seen for the observations.
 
-The EC fraction of \pmfine (\QUERY{trend }-2.4$\pm$1.1 \%/yr) decreased at all
+The EC fraction of \pmfine (\QUERY{trend }-2.4$\pm$1.1~\%/yr) decreased at all
 sites, and at a level equal as, or higher than, the \ce{SO4^2-} fraction. The
 change in OC fraction was more scattered with a substantial and
-consistent 4.5\%/yr increase at the northernmost sites, whereas
-there was no increase or decrease (0.2$\pm$2.8\%/yr) when considering
+consistent 4.5~\%/yr increase at the northernmost sites, whereas
+there was no increase or decrease (0.2$\pm$2.8~\%/yr) when considering
 all sites. Influence of OC from natural sources likely has a profound
 impact on the general lack of decrease observed for the OC fraction of
 \pmfine. These observations points to a continuous change in the aerosol
