Fixing some refs

--- a/trends.bib
+++ b/trends.bib
@@ -391,10 +391,10 @@ PAGES = {1--70},
 DOI = {10.5194/amt-2019-499}
 }
 %EMEP
-@Article{torseth2012,
+@Article{oldtorseth2012,
 AUTHOR = {T{\o}rseth, K. and Aas, W. and Breivik, K. and Fj{\ae}raa, A. M. and Fiebig, M. and Hjellbrekke, A. G. and Lund Myhre, C. and Solberg, S. and Yttri, K. E.},
 TITLE = {Introduction to the European Monitoring and Evaluation Programme (EMEP) and observed atmospheric composition change during 1972-2009},
-JOURNAL = {Atmospheric Chemistry and Physics},
+JOURNAL = acp,
 VOLUME = {12},
 YEAR = {2012},
 NUMBER = {12},
@@ -415,27 +415,30 @@ author = "J.L. Hand and A.J. Prenni and B.A. Schichtel and W.C. Malm and J.C. Ch
 @article{Warren2016,
 author = {Warren H. White and Krystyna Trzepla and Nicole P. Hyslop and Bret A. Schichtel},
 title = {A critical review of filter transmittance measurements for aerosol light absorption, and de novo calibration for a decade of monitoring on PTFE membranes},
-journal = {Aerosol Science and Technology},
+journal = ast,
 volume = {50},
 number = {9},
 pages = {984-1002},
 year  = {2016},
 publisher = {Taylor & Francis},
-doi = {10.1080/02786826.2016.1211615},
+doi = {10.1080/02786826.2016.1211615}
+}
 
 %sunphoto-moon
 @article{barreto2016new,
   title={The new sun-sky-lunar Cimel CE318-T multiband photometer-a comprehensive performance evaluation},
   author={Barreto, {\'A}frica and Cuevas Agull{\'o}, Emilio and Granados-Mu{\~n}oz, Mar{\'\i}a Jos{\'e} and Alados-Arboledas, Lucas and Romero Campos, Pedro Miguel and Gr{\"o}bner, Julian and Kouremeti, Natalia and Almansa Rodr{\'\i}guez, Antonio F and Stone, Tom and Toledano, Carlos and others},
   year={2016},
+  journal = amt,
   publisher={European Geosciences Union},
   doi={10.5194/amt-9-631-2016}
 }
+
 %scattering
 @Article{jonaseval,
 AUTHOR = {Gli{\ss}, J. and Mortier, A. and Schulz, M. and Andrews, E. and Balkanski, Y. and Bauer, S. E. and Benedictow, A. M. K. and Bian, H. and Checa-Garcia, R. and Chin, M. and Ginoux, P. and Griesfeller, J. J. and Heckel, A. and Kipling, Z. and Kirkev{\aa}g, A. and Kokkola, H. and Laj, P. and Le Sager, P. and Lund, M. T. and Lund Myhre, C. and Matsui, H. and Myhre, G. and Neubauer, D. and van Noije, T. and North, P. and Olivi\'e, D. J. L. and Sogacheva, L. and Takemura, T. and Tsigaridis, K. and Tsyro, S. G.},
 TITLE = {Multi-model evaluation of aerosol optical properties in the AeroCom phase III Control experiment, using ground and space based columnar observations from AERONET, MODIS, AATSR and a merged satellite product as well as surface in-situ observations from GAW sites},
-JOURNAL = {Atmospheric Chemistry and Physics Discussions},
+JOURNAL = acpd,
 VOLUME = {2020},
 YEAR = {2020},
 PAGES = {1--62},
@@ -630,12 +633,13 @@ DOI = {10.5194/gmd-12-4823-2019}
 @Article{seland2019,
 AUTHOR = {Seland, {\O}. and Bentsen, M. and Seland Graff, L. and Olivi\'e, D. and Toniazzo, T. and Gjermundsen, A. and Debernard, J. B. and Gupta, A. K. and He, Y. and Kirkev{\aa}g, A. and Schwinger, J. and Tjiputra, J. and Schancke Aas, K. and Bethke, I. and Fan, Y. and Griesfeller, J. and Grini, A. and Guo, C. and Ilicak, M. and Hafsahl Karset, I. H. and Landgren, O. and Liakka, J. and Onsum Moseid, K. and Nummelin, A. and Spensberger, C. and Tang, H. and Zhang, Z. and Heinze, C. and Iverson, T. and Schulz, M.},
 TITLE = {The Norwegian Earth System Model, NorESM2 -- Evaluation of theCMIP6 DECK and historical simulations},
-JOURNAL = {Geoscientific Model Development Discussions},
+JOURNAL = gmdd,
 VOLUME = {2020},
 YEAR = {2020},
 PAGES = {1--68},
-DOI = {10.5194/gmd-2019-378
+DOI = {10.5194/gmd-2019-378}
 }
+
 %NorESM2
 @article{kirkevag2018production,
   title={A production-tagged aerosol module for Earth system models, OsloAero5. 3-extensions and updates for CAM5. 3-Oslo},
