--- a/RefsEmis.bib
+++ b/RefsEmis.bib
@@ -82,6 +82,8 @@ EMEP@STRING{acie = {Angew. Chem. Int. Ed.}}
 
 @STRING{erl = {Environ. Res. Lett.}}
 
+@STRING{essd = {Earth Syst. Sci. Data}}
+
 @STRING{esd = {Earth Syst. Dynam.}}
 
 @STRING{est = {Environ. Sci. Technol.}}
@@ -279,12 +281,12 @@ EMEP@STRING{acie = {Angew. Chem. Int. Ed.}}
 
 @Article{EDGARv432,
 AUTHOR = {Crippa, M. and Guizzardi, D. and Muntean, M. and Schaaf, E. and Dentener, F. and van Aardenne, J. A. and Monni, S. and Doering, U. and Olivier, J. G. J. and Pagliari, V. and Janssens-Maenhout, G.},
-TITLE = {Gridded emissions of air pollutants for the period 1970–2012 within EDGAR v4.3.2},
-JOURNAL = {Earth System Science Data},
+TITLE = {Gridded emissions of air pollutants for the period 1970--2012 within EDGAR v4.3.2},
+JOURNAL = essd,
 VOLUME = {10},
 NUMBER={4},
 YEAR = {2018},
-PAGES = {1987–-2013},
+PAGES = {1987--2013},
 DOI = {10.5194/essd-10-1987-2018}
 }
 
