--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -1212,6 +1212,14 @@ further reduction in the observed \pmfine mass concentration in Europe,
 although effort is needed to separate its natural and anthropogenic
 fraction to get a quantitative overview of the abatable fractions.
 
+\COMMENT{PUT TEXT FOR EXECUTIVE SUMMARY here and I can move it later:}\\
+
+The observed trends in annual EC and wintertime OC (ca. 4~\%/yr) suggest that abatement measures
+are having some success in reducing these components and PM in geveral. The reductions in levoglocosan also suggest a reduction in RWC emissions .....
+Problems with condensables impact EC and especially OC ....
+bla bla
+
+
 
 \clearpage
 \section{Exceedances of critical loads of acidification and eutrophication in 2000 to 2019.}
