Update on Overleaf.

--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -640,7 +640,7 @@ For SOMO35 and AOT40 the number of sites with significant trends in the observat
 
 
 \begin{table}
-\caption{\label{tab:O3_stat} The estimated mean values of the absolute and relative trends in O$_3$ metrics based on stations north and south of 49 \degrees N (observed and modelled). The corresponding 95\% confidence intervals of these mean values and the number of sites with significant trends are also provided.}. Results are given for for the 75th and 99th percentile as well as SOMO35, EU definition of AOT40 for crops (AOT40c), and EU definition for forests (AOT40f). Note that the number of sites 'obs' and 'mod' refer to the number of sites with significant slopes (p<0.05) whereas the man values include all sites irrespective of the significance.
+\caption{\label{tab:O3_stat} The estimated mean values of the absolute and relative trends in O$_3$ metrics based on stations north and south of 49 \degrees N (observed and modelled). The corresponding 95\% confidence intervals of these mean values and the number of sites with significant trends are also provided. Results are given for the 75th and 99th percentile as well as SOMO35, EU definition of AOT40 for crops (AOT40c), and EU definition for forests (AOT40f). Note that the number of sites 'obs' and 'mod' refer to the number of sites with significant slopes (p<0.05) whereas the man values include all sites irrespective of the significance.}
 \begin{center}
 \scalebox{0.65}{%
 \begin{tabular}{lll|ccc|cccc|cccc}
@@ -708,7 +708,9 @@ Figures \ref{fig:O3_aot40croptrends} - \ref{fig:O3_somo35trends} show the statio
 \end{figure}
 
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\clearpage
 \section{Trends in Elemental and Organic Carbon}
 \label{sec:trendsECOC}
 \subsection{Elemental Carbon, EC}
@@ -1165,8 +1167,25 @@ Obs.  &              15 &     2 &                  0.0001 &  (-0.003, 0.0032) & 
 
 
 
-\subsection{Conclusion}
+\subsection{Trends in EC and OC, conclusion}
 \label{ss:trendsECOCconc}
+
+\COMMENT{DS to KE: I suggest simplifying the conclusions, making the main points but avoiding the detailed numbers (which have proved sensitive to time-windows. I'll write new text first, leaving the old below, so you can see my suggestions and we can agree...}
+
+
+\COMMENT{NEW TEXT:\\}
+
+For EC and OC we have calculated observed and modelled trends for 15 sites across Europe for the period 2010--2019. It should be noted that this 10-year period is rather short for the calculation of robust trends (and we show that slightly different time-windows produce different statistics), but some features of the trend analysis seem rather consistent, and we summarise the main points here. 
+
+A reduction (ca. -4.5~\%/yr) in observed EC was found across 15 sites across Europe for the  period 
+2010--2019. The reduction in levoglucosan at the site Birkenes in southern Norway (which is significantly impacted by long-range transport of pollution from continental Europe) was found to be over 5\% also, which suggests that emissions from residential wood combustion were reduced significantly over this period. However, observed EC reductions were rather similar levels in all seasons, which suggests that emissions abatement of EC has been successful across a range of emission sources. 
+
+Observed OC levels were also reduced by ca. 4~\%/yr 
+
+fact thareduction though Concentrations of observed OC were also reduced by a similar
+
+
+\COMMENT{ORIG TEXT:\\}
 
 A -4.5$\pm$1.6~\%/yr reduction in EC was calculated across Europe for
 2010--2019 and the reduction was particularly consistent amongst the
