--- a/report.tex
+++ b/report.tex
@@ -53,7 +53,7 @@
 \renewcommand\bibname{References}      % bibliographystyle command!
 
 %Added by Dave:
-%\usepackage[hyphens]{url}              % fro web-addresses
+%\usepackage[hyphens]{url}              % for web-addresses
 \usepackage[hyphens]{xurl} 
 \usepackage{hyperref}                  % clickable cross-references and hyperlinks
 \hypersetup{colorlinks=false,pdfborder={0 0 0},} % Remove ugly borders around hyperlinks
